--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,33 @@ services:
   stats-server:
     ports:
       - "9090:9090"
+    build: ./ewm-stats/ewm-stats-server
+    container_name: stats-server
+    image: stats-server
 
-  stats-db:
-    image: postgres:14-alpine
+#  stats-db:
+#    ports:
+#      - "6541:5432"
+#    container_name: stats-db
+#    image: postgres:14-alpine
+#    environment:
+#      POSTGRES_DB: stats-db
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: postgres
 
   ewm-service:
     ports:
       - "8080:8080"
+    build: ./ewm-main-service
+    container_name: ewm-service
+    image: ewm-service
 
   ewm-db:
+    ports:
+      - "6541:5432"
+    container_name: stats-db
     image: postgres:14-alpine
+    environment:
+      POSTGRES_DB: stats-db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
