--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<name>Explore With Me</name>
+    <modules>
+        <module>ewm-stats</module>
+		<module>ewm-main-service</module>
+    </modules>
 
 	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
