--- a/ewm-main-service/pom.xml
+++ b/ewm-main-service/pom.xml
@@ -18,6 +18,18 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>ru.practicum</groupId>
+			<artifactId>ewm-stats-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
