refactor, feat: перенос в корректный пакет, добавил конфиг

--- a/ewm-stats/ewm-stats-server/src/main/resources/application.properties
+++ b/ewm-stats/ewm-stats-server/src/main/resources/application.properties
@@ -13,9 +13,12 @@ jdbc.url=jdbc:postgresql://db:5432/stats-db
 jdbc.username=postgres
 jdbc.password=postgres
 
-spring.datasource.url=jdbc:h2:./db/filmorate
+spring.datasource.url=jdbc:h2:./db/filmorate-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
 server.port=9090
+server.servlet-path=/stats-server
+stats-server-url=http://stats-server:9090
+server.servlet.contextPath=/stats-server
