--- a/ewm-main-service/src/main/resources/application.properties
+++ b/ewm-main-service/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.datasource.username=sa
 spring.datasource.password=password
 
 server.port=8080
-stats-server-url=http://stats-server:9090
+stats-server.url=http://stats-server:9090
