--- a/ewm-stats/ewm-stats-client/pom.xml
+++ b/ewm-stats/ewm-stats-client/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>ewm-stats-dto</artifactId>
-            <version>${project.version}</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
